# galleryviewer

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: galleryviewer.1.in  galleryviewer.conf.5.in
requirements/: py310.txt  py311.txt  py312.txt  py36.txt  py37.txt  py38.txt  py39.txt
scripts/: render.py
src/galleryviewer/: __init__.py  __main__.py  compat.py  main.py
src/galleryviewer/templates/: dark.html  default.html
src/galleryviewer/templates/include/: base.html.jinja  dark-mode.css  light-mode.css  scripts.js
test/: test_backports.py  test_cli.sh  test_doctest.py  test_main.py  test_units.py
