[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.main]
py-version = "3.6"

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = "missing-docstring"

[tool.isort]
# Use default isort settings.

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--doctest-modules"
