[metadata]
name = galleryviewer
version = attr: galleryviewer.__version__
author = Dylan Maltby
description = Create an HTML viewer for images in a directory
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
license_files = COPYING

[options]
packages = find_namespace:
package_dir =
	= src
include_package_data = True
python_requires = >=3.6
install_requires =
	jinja2 >= 2.9
	dataclasses; python_version<"3.7"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	galleryviewer = galleryviewer.main:main
